fix some warnings
VEO-963, VEO-1116