@@ -81,7 +81,7 @@ public class ObjectSchemaParser {
                   subTypeDefinition.setStatuses(
                       StreamSupport.stream(statusValues.spliterator(), false)
                           .map(JsonNode::asText)
-                          .collect(Collectors.toList()));
+                          .toList());
                   return subTypeDefinition;
                 }));
   }
