@@ -59,7 +59,6 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotBlank;
@@ -448,7 +447,7 @@ public class AssetController extends AbstractElementController<Asset, FullAssetD
         output ->
             output.getRisks().stream()
                 .map(risk -> AssetRiskDto.from(risk, referenceAssembler))
-                .collect(Collectors.toList()));
+                .toList());
   }
 
   @Override
